# agentic-capabilities

./: .env.example  .gitignore  FEATURES.md  OBSERVATIONS.md  README.md  pyproject.toml  start.sh  test_bargein.py  test_interruption.py  test_long.py  test_voice.py
avatars/: manifest.json
backend/: config.py  main.py  serializers.py  voice_registry.py
backend/avatar/: models.py  registry.py
backend/llm/: factory.py
backend/mcp_server/: presence.py  tools.py
backend/mcp_server/tests/: test_presence.py
backend/processors/: agent_routing.py  avatar_state.py  claude_agent.py  context_sanitizer.py  text_input.py
backend/processors/tests/: test_agent_routing.py
backend/session/: manager.py  models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AvatarScene/: AvatarModel.tsx  AvatarScene.tsx
frontend/src/components/AvatarSelector/: AvatarSelector.tsx
frontend/src/components/ChatPanel/: ChatPanel.tsx
frontend/src/components/VocalPalette/: VocalPalette.tsx
frontend/src/components/VoiceControls/: VoiceControls.tsx
frontend/src/hooks/: useAudioCapture.ts  useAudioPlayer.ts  useAvatarState.ts  useVoicePreferences.ts  useWebSocket.ts
frontend/src/store/: conversationStore.ts
frontend/src/types/: protocol.ts
