[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-capabilities"
version = "0.1.0"
description = "Plug-and-play avatar conversation capability for AI agents"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,openai,google,elevenlabs,silero]>=0.0.55",
    "faster-whisper>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.1",
    "mcp>=1.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.28",
]

[project.optional-dependencies]
groq = ["groq>=0.11"]
ollama = ["ollama>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.28"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
